# ptcgabc-ismcts

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
agents/: base.py  heuristic_agent.py  ismcts_agent.py  oracle_agent.py  pimc_agent.py  random_agent.py
docs/: benchmark-protocol.md  engineering.md  game-primer.md  ismcts-walkthrough.md  mdp-formalization.md  research.md  risk-register.md  rules-summary.md  submission-log.md
env/: actions.py  observation.py  search_engine.py  wrapper.py
evaluator/: heuristic.py  option_types.py  rollout.py  threat.py
exercises/: ex01_environment.md  ex02_mcts_derivations.md  ex04_evaluator_math.md  sutton-barto-ch01.md  sutton-barto-ch02.md  sutton-barto-ch03.md  sutton-barto-ch08.md
experiments/: registry.md
notebooks/: phase2-gridworld-mdp.ipynb  phase2-gridworld-mdp.py
notes/: deferred-projects.md  open-ideas.md  phase1-baseline-analysis.md  phase2-ismcts-paper-notes.md  phase2-long-2010-notes.md  phase2-mcts-fundamentals.md  phase2-rl-foundations.md  phase2-synthesis.md  phase3-implementation-plan.md  phase4-deck-selection.md  phase4-evaluator-design.md  phase4-time-budget-calibration.md
scripts/: analyze_card_pool.py  analyze_exp008.py  analyze_exp008_confirm.py  debug_search_begin.py  exp010_analysis.py  exp011_analysis.py  exp012_analysis.py  exp_ablation_evaluator.py  exp_ablation_rollout.py  exp_seed_stability.py  exp_sensitivity_c.py  exp_sensitivity_determinizations.py  exp_sensitivity_simulations.py  exp_timing.py  explore_cg_api.py  heal_exp011_env_errors.sh  local_ladder.py  (+12 more)
(+52 files in other folders)
