[project]
name = "ptcgabc-ismcts"
version = "0.0.1"
description = "Information-Set MCTS agent for the Pokémon TCG AI Battle Challenge (portfolio-grade research project)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Ramos Martins" },
]
keywords = ["ismcts", "mcts", "pokemon-tcg", "kaggle", "imperfect-information-games"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
